--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='gold' viewBox='0 0 16 16'%3E%3Cpath d='M8 4.5a3.5 3.5 0 1 1 0 7 3.5 3.5 0 0 1 0-7zM8 1a.5.5 0 0 1 .5.5V3a.5.5 0 0 1-1 0V1.5A.5.5 0 0 1 8 1zm0 12.5a.5.5 0 0 1 .5.5V15a.5.5 0 0 1-1 0v-1.5a.5.5 0 0 1 .5-.5zm7-6.5a.5.5 0 0 1-.5.5H13a.5.5 0 0 1 0-1h1.5a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5H1a.5.5 0 0 1 0-1h1.5A.5.5 0 0 1 3 8zm10.657-4.657a.5.5 0 0 1 0 .707L13.207 5.5a.5.5 0 1 1-.707-.707l.45-.45a.5.5 0 0 1 .707 0zM3.5 12.793a.5.5 0 0 1 0 .707l-.45.45a.5.5 0 1 1-.707-.707l.45-.45a.5.5 0 0 1 .707 0zm9.293 0 .45.45a.5.5 0 0 1-.707.707l-.45-.45a.5.5 0 1 1 .707-.707zM3.5 3.207l-.45-.45a.5.5 0 1 1 .707-.707l.45.45A.5.5 0 0 1 3.5 3.207z'/%3E%3C/svg%3E"
+    />
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meteo</title>
   </head>
